[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "bambulab-cloud"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
categories = ["network-programming", "api-bindings"]
repository = "https://github.com/m1guelpf/bambulab-rs"
description = "An API client for Bambu Lab's Cloud API"
keywords = ["3d-printer", "api", "client", "cloud", "bambu"]

[dependencies]
webpki = "0.21.0"
thiserror = "1.0.58"
serde_json = "1.0.115"
mqtt-async-client = "0.3.1"
url = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
