[package]
license = "MIT"
edition = "2021"
version = "0.1.1"
name = "bambulab-cloud"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
categories = ["network-programming", "api-bindings"]
repository = "https://github.com/m1guelpf/bambulab-rs"
description = "An API client for Bambu Lab's Cloud API"
keywords = ["3d-printer", "api", "client", "cloud", "bambu"]

[dependencies]
thiserror = "1.0.58"
serde_json = "1.0.115"
url = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
jsonwebtoken = { version = "9.3.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
